modules/ubuntu-vm-public-key-auth/main.tf
resource "azurerm_public_ip" "public" {
  name                = var.public_ip_name
  resource_group_name = var.resource_group_name
  location            = var.resource_group_location
  allocation_method   = "Static"
}

resource "azurerm_network_interface" "public" {
  name                = var.network_interface_name
  location            = var.resource_group_location
  resource_group_name = var.resource_group_name

  ip_configuration {
    name                          = var.ip_configuration_name
    subnet_id                     = var.subnet_id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id          = azurerm_public_ip.public.id
  }
}

resource "azurerm_virtual_machine" "public" {
  name                  = var.vm_name
  location              = var.resource_group_location
  resource_group_name   = var.resource_group_name
  network_interface_ids = [azurerm_network_interface.public.id]
  vm_size               = var.vm_size

  delete_os_disk_on_termination = true

  storage_image_reference {
    publisher = var.storage_image_reference_publisher
    offer     = var.storage_image_reference_offer
    sku       = var.storage_image_reference_sku
    version   = var.storage_image_reference_version
  }

  storage_os_disk {
    name              = var.storage_os_disk_name
    caching           = var.storage_os_disk_caching
    create_option     = var.storage_os_disk_create_option
    managed_disk_type = var.storage_os_disk_managed_disk_type
  }

  os_profile_linux_config {
    disable_password_authentication = true

    ssh_keys {
      path     = "/home/${var.os_profile_admin_username}/.ssh/authorized_keys"
      key_data = file(var.os_profile_admin_public_key_path)
    }
  }

  os_profile {
    computer_name  = var.os_profile_computer_name
    admin_username = var.os_profile_admin_username
  }

  provisioner "file" {
    connection {
      type        = "ssh"
      user        = var.os_profile_admin_username
      private_key = file(var.private_key_path)
      host        = azurerm_public_ip.public.ip_address
    }
    
    source      = var.provision_script_path
    destination = var.provision_script_destination
  }

  provisioner "remote-exec" {
    connection {
      type        = "ssh"
      user        = var.os_profile_admin_username
      private_key = file(var.private_key_path)
      host        = azurerm_public_ip.public.ip_address
    }
    
    inline = [
      "chmod +x ${var.provision_script_destination}",
      var.provision_script_destination
    ]
  }

  depends_on = [
    azurerm_network_interface_security_group_association.public
  ]
}

resource "azurerm_network_interface_security_group_association" "public" {
  network_interface_id      = azurerm_network_interface.public.id
  network_security_group_id = var.network_security_group_id
}
